5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/3094/executions/1674_1103.log
== SUBMITION (2019-05-02 01:05:48) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x=float(input(''))
a=float(input(''))
b=float(input(''))

if((b>a)or(x>=a)and(x<=b)):
	if((x>=a)and(x<=b)):
		print(x, 'pertence ao intervalo ', a, ',', b)
	elif((x!=a) and(x<a)or(x!=b)and(x>b)):
		print(x,'nao pertence ao itervalo ', a, ',' , b)
		
else:
	print('Entradas ', a, 'e', b, 'invalidas')
-- EXECUTION TIME:
0.195318
-- TEST CASE 1:
---- input:
2
3
4
---- correct output:
2.0 nao pertence ao intervalo 3.0 , 4.0
---- user output:
2.0 nao pertence ao itervalo  3.0 , 4.0
-- TEST CASE 2:
---- input:
5.5
6.5
3.5
---- correct output:
Entradas 6.5 e 3.5 invalidas
---- user output:
Entradas  6.5 e 3.5 invalidas
-- TEST CASE 3:
---- input:
6.5
1.1
22.2
---- correct output:
6.5 pertence ao intervalo 1.1 , 22.2
---- user output:
6.5 pertence ao intervalo  1.1 , 22.2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 01:06:00) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x=float(input(''))
a=float(input(''))
b=float(input(''))

if((b>a)or(x>=a)and(x<=b)):
	if((x>=a)and(x<=b)):
		print(x, 'pertence ao intervalo ', a, ',', b)
	elif((x!=a) and(x<a)or(x!=b)and(x>b)):
		print(x,'nao pertence ao itervalo ', a, ',' , b)
		
else:
	print('Entradas ', a, 'e', b, 'invalidas')
-- OUTPUT:
2.0 nao pertence ao itervalo  3.0 , 4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 01:06:19) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x=float(input(''))
a=float(input(''))
b=float(input(''))

if((b>a)or(x>=a)and(x<=b)):
	if((x>=a)and(x<=b)):
		print(x, 'pertence ao intervalo ', a, ',', b)
	elif((x!=a) and(x<a)or(x!=b)and(x>b)):
		print(x,'nao pertence ao itervalo ', a, ',' , b)
		
else:
	print('Entradas ', a, 'e', b, 'invalidas')
-- EXECUTION TIME:
0.145611
-- TEST CASE 1:
---- input:
2
3
4
---- correct output:
2.0 nao pertence ao intervalo 3.0 , 4.0
---- user output:
2.0 nao pertence ao itervalo  3.0 , 4.0
-- TEST CASE 2:
---- input:
5.5
6.5
3.5
---- correct output:
Entradas 6.5 e 3.5 invalidas
---- user output:
Entradas  6.5 e 3.5 invalidas
-- TEST CASE 3:
---- input:
6.5
1.1
22.2
---- correct output:
6.5 pertence ao intervalo 1.1 , 22.2
---- user output:
6.5 pertence ao intervalo  1.1 , 22.2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 01:06:43) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x=float(input(''))
a=float(input(''))
b=float(input(''))

if((b>a)or(x>=a)and(x<=b)):
	if((x>=a)and(x<=b)):
		print(x, 'pertence ao intervalo ', a, ',', b)
	elif((x!=a) and(x<a)or(x!=b)and(x>b)):
		print(x,'nao pertence ao itervalo ', a, ',', b)
		
else:
	print('Entradas ', a, 'e', b, 'invalidas')
-- EXECUTION TIME:
0.159915
-- TEST CASE 1:
---- input:
2
3
4
---- correct output:
2.0 nao pertence ao intervalo 3.0 , 4.0
---- user output:
2.0 nao pertence ao itervalo  3.0 , 4.0
-- TEST CASE 2:
---- input:
5.5
6.5
3.5
---- correct output:
Entradas 6.5 e 3.5 invalidas
---- user output:
Entradas  6.5 e 3.5 invalidas
-- TEST CASE 3:
---- input:
6.5
1.1
22.2
---- correct output:
6.5 pertence ao intervalo 1.1 , 22.2
---- user output:
6.5 pertence ao intervalo  1.1 , 22.2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 01:07:22) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x=float(input(''))
a=float(input(''))
b=float(input(''))

if((b>a)or(x>=a)and(x<=b)):
	if((x>=a)and(x<=b)):
		print(x, 'pertence ao intervalo ', a, ',', b)
	elif((x!=a) and(x<a)or(x!=b)and(x>b)):
		print(x,'nao pertence ao itervalo ', a, ',', b)
		
else:
	print('Entradas ', a, 'e', b, 'invalidas')
-- EXECUTION TIME:
0.124633
-- TEST CASE 1:
---- input:
2
3
4
---- correct output:
2.0 nao pertence ao intervalo 3.0 , 4.0
---- user output:
2.0 nao pertence ao itervalo  3.0 , 4.0
-- TEST CASE 2:
---- input:
5.5
6.5
3.5
---- correct output:
Entradas 6.5 e 3.5 invalidas
---- user output:
Entradas  6.5 e 3.5 invalidas
-- TEST CASE 3:
---- input:
6.5
1.1
22.2
---- correct output:
6.5 pertence ao intervalo 1.1 , 22.2
---- user output:
6.5 pertence ao intervalo  1.1 , 22.2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 01:07:24) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x=float(input(''))
a=float(input(''))
b=float(input(''))

if((b>a)or(x>=a)and(x<=b)):
	if((x>=a)and(x<=b)):
		print(x, 'pertence ao intervalo ', a, ',', b)
	elif((x!=a) and(x<a)or(x!=b)and(x>b)):
		print(x,'nao pertence ao itervalo ', a, ',', b)
		
else:
	print('Entradas ', a, 'e', b, 'invalidas')
-- OUTPUT:
2.0 nao pertence ao itervalo  3.0 , 4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 09:11:58) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x=float(input(''))
a=float(input(''))
b=float(input(''))

if((b>a)or(x>=a)and(x<=b)):
	if((x>=a)and(x<=b)):
		print(x, 'pertence ao intervalo ', a, ',', b)
	elif((x!=a) and(x<a)or(x!=b)and(x>b)):
		print(x,'nao pertence ao itervalo ', a, ',', b)
		
else:
	print('Entradas ', a, 'e', b, 'invalidas')
-- EXECUTION TIME:
0.217786
-- TEST CASE 1:
---- input:
2
3
4
---- correct output:
2.0 nao pertence ao intervalo 3.0 , 4.0
---- user output:
2.0 nao pertence ao itervalo  3.0 , 4.0
-- TEST CASE 2:
---- input:
5.5
6.5
3.5
---- correct output:
Entradas 6.5 e 3.5 invalidas
---- user output:
Entradas  6.5 e 3.5 invalidas
-- TEST CASE 3:
---- input:
6.5
1.1
22.2
---- correct output:
6.5 pertence ao intervalo 1.1 , 22.2
---- user output:
6.5 pertence ao intervalo  1.1 , 22.2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 09:29:14) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x=float(input(''))
a=float(input(''))
b=float(input(''))

if((b>a)or(x>=a)and(x<=b)):
	if((x>=a)and(x<=b)):
		print(x, 'pertence ao intervalo ', a, ',', b)
	elif((x!=a) and(x<a)or(x!=b)and(x>b)):
		print(x,'nao pertence ao itervalo ', a, ',', b)
		
else:
	print('Entradas ', a, 'e', b, 'invalidas')
-- OUTPUT:
2.0 nao pertence ao itervalo  3.0 , 4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 09:29:28) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x=float(input(''))
a=float(input(''))
b=float(input(''))

if((b>a)or(x>=a)and(x<=b)):
	if((x>=a)and(x<=b)):
		print(x, 'pertence ao intervalo ', a, ',', b)
	elif((x!=a) and(x<a)or(x!=b)and(x>b)):
		print(x,'nao pertence ao itervalo ', a, ',', b)
		
else:
	print('Entradas ', a, 'e', b, 'invalidas')
-- EXECUTION TIME:
0.131317
-- TEST CASE 1:
---- input:
2
3
4
---- correct output:
2.0 nao pertence ao intervalo 3.0 , 4.0
---- user output:
2.0 nao pertence ao itervalo  3.0 , 4.0
-- TEST CASE 2:
---- input:
5.5
6.5
3.5
---- correct output:
Entradas 6.5 e 3.5 invalidas
---- user output:
Entradas  6.5 e 3.5 invalidas
-- TEST CASE 3:
---- input:
6.5
1.1
22.2
---- correct output:
6.5 pertence ao intervalo 1.1 , 22.2
---- user output:
6.5 pertence ao intervalo  1.1 , 22.2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 09:32:09) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x=float(input(""))
a=float(input(""))
b=float(input(""))

if((b>a)or(x>=a)and(x<=b)):
	if((x>=a)and(x<=b)):
		print(x, "pertence ao intervalo ", a, ",", b)
	elif((x!=a) and(x<a)or(x!=b)and(x>b)):
		print(x,"nao pertence ao itervalo ", a, "","", b)
		
else:
	print("Entradas ", a, "e", b, "invalidas")
-- EXECUTION TIME:
0.167514
-- TEST CASE 1:
---- input:
2
3
4
---- correct output:
2.0 nao pertence ao intervalo 3.0 , 4.0
---- user output:
2.0 nao pertence ao itervalo  3.0   4.0
-- TEST CASE 2:
---- input:
5.5
6.5
3.5
---- correct output:
Entradas 6.5 e 3.5 invalidas
---- user output:
Entradas  6.5 e 3.5 invalidas
-- TEST CASE 3:
---- input:
6.5
1.1
22.2
---- correct output:
6.5 pertence ao intervalo 1.1 , 22.2
---- user output:
6.5 pertence ao intervalo  1.1 , 22.2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 09:33:40) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x=float(input(""))
a=float(input(""))
b=float(input(""))

if((b>a) or (x>=a) and (x<=b)):
	if((x>=a) and (x<=b)):
		print(x, "pertence ao intervalo ", a, ",", b)
	elif((x!=a) and (x<a) or (x!=b) and (x>b)):
		print(x,"nao pertence ao itervalo ", a, "","", b)
		
else:
	print("Entradas ", a, "e", b, "invalidas")
-- EXECUTION TIME:
0.182962
-- TEST CASE 1:
---- input:
2
3
4
---- correct output:
2.0 nao pertence ao intervalo 3.0 , 4.0
---- user output:
2.0 nao pertence ao itervalo  3.0   4.0
-- TEST CASE 2:
---- input:
5.5
6.5
3.5
---- correct output:
Entradas 6.5 e 3.5 invalidas
---- user output:
Entradas  6.5 e 3.5 invalidas
-- TEST CASE 3:
---- input:
6.5
1.1
22.2
---- correct output:
6.5 pertence ao intervalo 1.1 , 22.2
---- user output:
6.5 pertence ao intervalo  1.1 , 22.2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 09:34:45) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x=float(input(""))
a=float(input(""))
b=float(input(""))

if((b > a) or (x >= a) and (x <= b)):
	if((x>=a) and (x<=b)):
		print(x, "pertence ao intervalo ",  a,  ",",  b)
	elif((x != a) and (x < a) or (x != b) and (x > b)):
		print(x, "nao pertence ao itervalo ",  a,  "","" , b)
		
else:
	print("Entradas ", a, "e", b, "invalidas")
-- EXECUTION TIME:
0.147784
-- TEST CASE 1:
---- input:
2
3
4
---- correct output:
2.0 nao pertence ao intervalo 3.0 , 4.0
---- user output:
2.0 nao pertence ao itervalo  3.0   4.0
-- TEST CASE 2:
---- input:
5.5
6.5
3.5
---- correct output:
Entradas 6.5 e 3.5 invalidas
---- user output:
Entradas  6.5 e 3.5 invalidas
-- TEST CASE 3:
---- input:
6.5
1.1
22.2
---- correct output:
6.5 pertence ao intervalo 1.1 , 22.2
---- user output:
6.5 pertence ao intervalo  1.1 , 22.2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 09:35:47) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x=float(input(""))
a=float(input(""))
b=float(input(""))

if((b > a) or (x >= a) and (x <= b)):
	if((x>=a) and (x<=b)):
	print(x, "pertence ao intervalo ",  a,  ",",  b)
	elif((x != a) and (x < a) or (x != b) and (x > b)):
	print(x, "nao pertence ao itervalo ",  a,  "","" , b)
		
else:
	print("Entradas ", a, "e", b, "invalidas")
-- EXECUTION TIME:
0.20794
-- ERROR:
  File "/home/codebench/codes/1674/1103/main.py", line 10
    print(x, "pertence ao intervalo ",  a,  ",",  b)
        ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 09:46:36) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x=float(input(""))
a=float(input(""))
b=float(input(""))

if((b > a) or (x >= a) and (x <= b)):
	if((x>=a) and (x<=b)):
		print(x, " pertence ao intervalo ",  a,  ", ",  b)
	elif((x != a) and (x < a) or (x != b) and (x > b)):
		print(x, " nao pertence ao itervalo ",  a,  ", " , b)
		
else:
	print("Entradas ", a, "e", b, "invalidas")
-- EXECUTION TIME:
0.170616
-- TEST CASE 1:
---- input:
2
3
4
---- correct output:
2.0 nao pertence ao intervalo 3.0 , 4.0
---- user output:
2.0  nao pertence ao itervalo  3.0 ,  4.0
-- TEST CASE 2:
---- input:
5.5
6.5
3.5
---- correct output:
Entradas 6.5 e 3.5 invalidas
---- user output:
Entradas  6.5 e 3.5 invalidas
-- TEST CASE 3:
---- input:
6.5
1.1
22.2
---- correct output:
6.5 pertence ao intervalo 1.1 , 22.2
---- user output:
6.5  pertence ao intervalo  1.1 ,  22.2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 09:46:51) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x=float(input(""))
a=float(input(""))
b=float(input(""))

if((b > a) or (x >= a) and (x <= b)):
	if((x>=a) and (x<=b)):
		print(x, " pertence ao intervalo ",  a,  ", ",  b)
	elif((x != a) and (x < a) or (x != b) and (x > b)):
		print(x, " nao pertence ao itervalo ",  a,  ", " , b)
		
else:
	print("Entradas ", a, "e ", b, " invalidas")
-- EXECUTION TIME:
0.136057
-- TEST CASE 1:
---- input:
2
3
4
---- correct output:
2.0 nao pertence ao intervalo 3.0 , 4.0
---- user output:
2.0  nao pertence ao itervalo  3.0 ,  4.0
-- TEST CASE 2:
---- input:
5.5
6.5
3.5
---- correct output:
Entradas 6.5 e 3.5 invalidas
---- user output:
Entradas  6.5 e  3.5  invalidas
-- TEST CASE 3:
---- input:
6.5
1.1
22.2
---- correct output:
6.5 pertence ao intervalo 1.1 , 22.2
---- user output:
6.5  pertence ao intervalo  1.1 ,  22.2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 09:47:03) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x=float(input(""))
a=float(input(""))
b=float(input(""))

if((b > a) or (x >= a) and (x <= b)):
	if((x>=a) and (x<=b)):
		print(x, " pertence ao intervalo ",  a,  ", ",  b)
	elif((x != a) and (x < a) or (x != b) and (x > b)):
		print(x, " nao pertence ao itervalo ",  a,  ", " , b)
		
else:
	print("Entradas ", a, "e ", b, " invalidas")
-- OUTPUT:
2.0  nao pertence ao itervalo  3.0 ,  4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
